# torch_bfo

./: .gitignore  BFO_Convergence_Analysis_Report.md  FINAL_BFO_IMPLEMENTATION_SUMMARY.md  FINAL_BFO_VALIDATION_SUMMARY.md  MANIFEST.in  Makefile  P0_IMPLEMENTATION_SUMMARY.md  PKG-INFO  README.md  SCHWEFEL_LITERATURE_COMPARISON.md  SCHWEFEL_LITERATURE_COMPARISON_REVISED.md  SCHWEFEL_REVISION_SUMMARY.md  benchmark_performance.py  bfo_comparison_fixed.py  bfo_library_search_report.json  check_p1_progress.py  convergence_benchmark.py  enhanced_bfo_test_results.json  final_comprehensive_test_summary.py  final_comprehensive_validation.json  optimized_priority1_test_results.json  optimized_priority1_tests.py  p1_background_progress.txt  p1_background_report.txt  p1_background_results.json  priority1_enhanced_tests.py  priority2_behavior_test_results.json  priority2_bfo_behavior_tests.py  priority3_advanced_tests.py  pyproject.toml  requirements-dev.txt  run_p1_background.py  schwefel_enhanced_experiments.py  schwefel_focused_experiments.py  schwefel_focused_results_20250729_080030.json  schwefel_p1_experiments.py  schwefel_p1_experiments_20250729_082222.json  schwefel_unbiased_experiments.py  schwefel_unbiased_experiments_20250729_071954.json  schwefel_unbiased_experiments_20250729_092407.json  (+14 more)
.github/workflows/: python-package.yml
bfo_torch/: optimizer.py
docs/: ALGORITHM.md  HYPERPARAMETERS.md  QUICKSTART.md  conf.py  index.md  index.rst
examples/: __init__.py  basic_usage.py  demo.py  hyperparameter_tuning.py  mnist_training.py  neural_network.py  optimizer_comparison.py  performance_benchmark.py  simple_function.py
legacy_complete/: CONTRIBUTING.rst  LICENSE  MIGRATION_GUIDE.md  Makefile  PYTORCH_BFO_OPTIMIZER_SPECS.md  README_updated.rst  RUNPOD_STATUS.md  gpu_v2_benchmark.py  minimal_example.py  performance_test.py  runpod_test.py  test_v3_fixes.py  test_v3_simple.py  torch_compile_config.py
legacy_complete/archive/development_artifacts/: background_benchmark.py  runpod_test_fixed.py
legacy_complete/archive/documentation/: EXPERT_REVIEW_V2_SUMMARY.md  FIXED_OPTIMIZER_SUMMARY.md  GPU_TEST_REPORT.md  GPU_V2_PERFORMANCE_REPORT.md  RUNPOD_FINAL_SUMMARY.md
legacy_complete/archive/older_versions/: optimizer_v2_improved.py
legacy_complete/archive/testing_artifacts/: final_test.py  integrate_v2_improvements.py  minimal_bfo_test.py  reduced_benchmark_test.py  simple_import_test.py
legacy_complete/docs/: INTEGRATION_GUIDE.md  USER_GUIDE.md
legacy_complete/examples/: demo.py
legacy_complete/expert_review_v2/issues/: ERROR_LOGS.md
legacy_complete/expert_review_v2/solutions/: IMPLEMENTATION_EXAMPLES.md
legacy_complete/expert_review_v2/src/: debug_utils.py  optimizer_v1_fixed.py
legacy_complete/expert_review_v2/tests/: test_compile_modes.py
legacy_complete/legacy_complete/: CLEANUP_SUMMARY.md  README.rst  README_RUNPOD.md  benchmark_results.py  demo_gpu_fixes.py  gpu_test_optimized.py
legacy_complete/legacy_complete/archive/development_artifacts/: background_gpu_test.py  runpod_hotfix.py
legacy_complete/legacy_complete/archive/documentation/: TROUBLESHOOTING_SUMMARY.md  V2_IMPROVEMENTS_SUMMARY.md
legacy_complete/legacy_complete/archive/older_versions/: optimizer_v2.py
legacy_complete/legacy_complete/archive/testing_artifacts/: gpu_v2_benchmark_simple.py  monitor_gpu_server.py  test_v2_improvements.py
legacy_complete/legacy_complete/benchmarks/: benchmark_suite.py
legacy_complete/legacy_complete/docs/: API_REFERENCE.md  conf.py
legacy_complete/legacy_complete/examples/: __init__.py
legacy_complete/legacy_complete/expert_review_v2/: README.md
legacy_complete/legacy_complete/expert_review_v2/issues/: HYBRIDBFO_ISSUES.md
legacy_complete/legacy_complete/expert_review_v2/solutions/: PROPOSED_SOLUTIONS.md
legacy_complete/legacy_complete/expert_review_v2/src/: optimizer_v2_improved.py
legacy_complete/legacy_complete/expert_review_v2/tests/: test_gradient_modes.py
legacy_complete/pytorch_bfo_optimizer/: __init__.py  debug_utils.py  optimizer_v3_fixed.py
legacy_complete/tests/: __init__.py
misc/: CHANGES.rst  MANIFEST.in  PROJECT_TRANSFORMATION_SUMMARY.md  runpod_setup.sh
pytorch_bfo_optimizer/: __init__.py  optimizer.py
src/bfo_torch/: __init__.py  chaotic_bfo.py  mimic_bfo.py  optimizer.py
tests/: __init__.py  conftest.py  test_benchmark_gallery.py  test_optimizer.py  test_schwefel.py
