[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorch_bfo_optimizer"
dynamic = ["version"]
authors = [{ name = "Brett Bonner", email = "brett.bonner@example.com" }]
description = "Bacterial Foraging Optimization (BFO) for PyTorch 2.8+ with torch.compile support"
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.8.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/brettbonner/pytorch-bfo-optimizer"
Issues = "https://github.com/brettbonner/pytorch-bfo-optimizer/issues"
Documentation = "https://brettbonner.github.io/pytorch-bfo-optimizer"

[tool.setuptools_scm]
write_to = "pytorch_bfo_optimizer/_version.py"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]