[metadata]
license = MIT
license_files = LICENSE

[options]
packages = find:
include_package_data = True
install_requires =
    torch>=2.8.0
    numpy>=1.24.0

[options.extras_require]
dev = 
    black>=23.0.0
    flake8>=6.0.0
    mypy>=1.5.0
    pytest>=7.4.0
    pytest-cov>=4.1.0
    sphinx>=7.0.0
    sphinx-rtd-theme>=1.3.0

[flake8]
max-line-length = 100
extend-ignore = E203, W503
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,_version.py